# GBEmu

./: .gitignore  CMakeLists.txt  README.md
include/: cartridgeData.h  cpu.h  enums.h  instructions.h  registers.h  renderer.h  tools.h
src/: cpu.cpp  instructions.cpp  main.cpp  renderer.cpp
